<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Blue">



    <ImageView
        android:id="@+id/aboutlogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@mipmap/logo" />


    <TextView
        android:id="@+id/aboutmeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutlogo"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/AboutMe"
        android:textColor="@color/White"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/aboutmeCompanyURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/AboutmeCompanyURL"
        android:textColor="@color/White"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/aboutmeCompanyURL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/AboutmeCompanyName"
        android:textColor="@color/White"
        android:textSize="16sp" />

</RelativeLayout>