<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shareRelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circlebackgroud">

    <LinearLayout
        android:id="@+id/shareLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/shareEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/whitedit"
            android:gravity="center_vertical"
            android:hint="@string/ShareEditHint"
            android:textColor="@color/Grey"
            android:textColorHint="@color/GreyDeep"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/shareText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@color/Grey"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/shareLinear"
        android:layout_marginTop="10dp"
        android:background="@drawable/circlebottomback"
        android:orientation="horizontal"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/shareCancal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/button_cancal"
            android:gravity="center"
            android:text="@string/cancal"
            android:textColor="@color/Blue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/shareEnter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/button_enter"
            android:gravity="center"
            android:text="@string/center"
            android:textColor="@color/Blue"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>